# Sitewrap

./: .gitignore  AGENTS.md  Cargo.toml  SPEC.md
.flatpak/: rust-analyzer.sh
crates/sitewrap-app/: Cargo.toml  build.rs
crates/sitewrap-app/data/blueprints/: manager_window.blp  shell_window.blp
crates/sitewrap-app/src/: lib.rs  manager.rs  permissions_ui.rs  resources.rs  shell.rs
crates/sitewrap-cli/: Cargo.toml
crates/sitewrap-cli/src/: main.rs
crates/sitewrap-engine/: Cargo.toml  README.md
crates/sitewrap-engine/src/: cef_backend.rs  lib.rs
crates/sitewrap-icons/: Cargo.toml  NOTICE
crates/sitewrap-icons/src/: lib.rs
crates/sitewrap-model/: Cargo.toml
crates/sitewrap-model/src/: lib.rs
crates/sitewrap-portal/: Cargo.toml  README.md
crates/sitewrap-portal/src/: lib.rs
crates/sitewrap-portal/tests/: launcher_descriptor.rs  open_uri_no_panic.rs
flatpak/: README-cef.md  cargo-sources.json  xyz.andriishafar.Sitewrap.desktop  xyz.andriishafar.Sitewrap.metainfo.xml  xyz.andriishafar.Sitewrap.yml
