[workspace]
members = [
  "crates/sitewrap-model",
  "crates/sitewrap-portal",
  "crates/sitewrap-engine",
  "crates/sitewrap-app",
  "crates/sitewrap-cli",
  "crates/sitewrap-icons",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
directories = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
gtk4 = { version = "0.8", package = "gtk4" }
gio = "0.19"
glib = "0.19"
gdk4 = "0.8"
adw = { version = "0.6", package = "libadwaita" }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico", "webp"] }
ico = "0.4"
rusttype = "0.9"
rand = "0.8"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"], default-features = false }

[workspace.package]
edition = "2021"
