[package]
name = "sitewrap-app"
version = "0.2.1"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
gtk4 = { workspace = true }
gdk4 = { workspace = true }
adw = { workspace = true, features = ["v1_2"] }
time = { workspace = true }
url = { workspace = true }
async-channel = "2.3"
sitewrap-model = { path = "../sitewrap-model" }
sitewrap-engine = { path = "../sitewrap-engine" }
sitewrap-portal = { path = "../sitewrap-portal" }
sitewrap-icons = { path = "../sitewrap-icons" }

[build-dependencies]
anyhow = { workspace = true }
