[package]
name = "sitewrap-cli"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sitewrap-app = { path = "../sitewrap-app" }
uuid = { workspace = true }

[[bin]]
name = "sitewrap"
path = "src/main.rs"
