[package]
name = "sitewrap-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
directories = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
